--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lujain's Personal Website</title>
+    <meta name="description" content="CV">
+    <meta name="keywords" content="cv,CV, Lujain">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
  <h1>Hi, I am Lujain</h1>  
