--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="description" content="CV">
     <meta name="keywords" content="cv,CV, Lujain">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="icon/flower_plant_nature_rose_icon_232532 (1).ico">
 </head>
 <body>
- <h1>Hi, I am Lujain</h1>  
- <h3>I am an IT student</h3>
+ 
 </body>
 </html>
