--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="CV">
     <meta name="keywords" content="cv,CV, Lujain">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="icon/flower_plant_nature_rose_icon_232532 (1).ico">
+    <link rel="icon" href="icon/flower_plant_nature_rose_icon_232532.ico">
 </head>
 <body>
  
