--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <meta name="keywords" content="cv,CV, Lujain">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="icon/flower_plant_nature_rose_icon_232532.ico">
+    <link href="https://fonts.googleapis.com/css2?family=El+Messiri:wght@400..700&display=swap" rel="stylesheet">
+
 </head>
 <body>
- 
+ <h1>lujain لجين</h1>
 </body>
 </html>
