--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="cv,CV, Lujain">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="icon/flower_plant_nature_rose_icon_232532.ico">
-    <link href="https://fonts.googleapis.com/css2?family=El+Messiri:wght@400..700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Amiri:ital,wght@0,400;0,700;1,400;1,700&family=El+Messiri:wght@400..700&display=swap" rel="stylesheet">
 
 </head>
 <body>
