--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-compatible" content="El=edge"
+    <meta http-equiv="X-UA-compatible" content="El=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lujain's Personal Website</title>
     <meta name="description" content="CV">
