--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-compatible" content="El=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Lujain's Personal Website</title>
-    <meta name="description" content="CV">
-    <meta name="keywords" content="cv,CV, Lujain">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="icon/flower_plant_nature_rose_icon_232532.ico">
-    <link href="https://fonts.googleapis.com/css2?family=Amiri:ital,wght@0,400;0,700;1,400;1,700&family=El+Messiri:wght@400..700&display=swap" rel="stylesheet">
+    <meta name="description" content="CV"/>
+    <meta name="keywords" content="cv,CV, Lujain"/>
+    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="icon" href="icon/flower_plant_nature_rose_icon_232532.ico"/>
+    <link href="https://fonts.googleapis.com/css2?family=Amiri:ital,wght@0,400;0,700;1,400;1,700&family=El+Messiri:wght@400..700&display=swap" rel="stylesheet"/>
 
 </head>
 <body>
