--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 
 </head>
 <body>
- <section class="home"></section>
+ <section class="home">
+<nav>
+    السيرة الذاتية
+</nav>
+
+ </section>
 </body>
 </html>
