--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
  <section class="home">
 <nav>
-    <h1> الذاتية<span>لجين</span>سيرة  </h1>
+    <h1> الذاتية <t><span>لجين</span></t> سيرة</h1>
 </nav>
 
  </section>
