--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
  <section class="home">
 <nav>
-    <h1> سيرة<t></t><span>لجين</span><t></t>الذاتية</h1>
+    <h1> سيرة<t><span>لجين</span>الذاتية</t></h1>
 </nav>
 
  </section>
