--- a/index.html
+++ b/index.html
@@ -13,9 +13,15 @@
 
 </head>
 <body>
- <section class="home">
+ <section class="home" id="Home">
 <nav>
     <h2> <span>السيرة الذاتية</span></h2>
+    <ul>
+        <li><a href="#Home">Home</a></li>
+        <li><a href="#Home">about me</a></li>
+        <li><a href="#Home">skills</a></li>
+        <li><a href="#Home">contact me</a></li>
+    </ul>
 </nav>
 
  </section>
