--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 <nav>
     <h2> <span>السيرة الذاتية</span></h2>
     <ul>
-        <li><a href="#Home">Home</a></li>
-        <li><a href="#Home">about me</a></li>
-        <li><a href="#Home">skills</a></li>
-        <li><a href="#Home">contact me</a></li>
+        <li><a href="#Home">الصفحة الرئيسية</a></li>
+        <li><a href="#Home">من أنا؟</a></li>
+        <li><a href="#Home">مهاراتي</a></li>
+        <li><a href="#Home">تواصل معي</a></li>
     </ul>
 </nav>
 
