--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
  <section class="home" id="Home">
 <nav>
-    <h2> <span>السيرة الذاتية</span></h2>
+    <h2> <span>Get to know me</span></h2>
     <ul>
         <li><a href="#Home">الصفحة الرئيسية</a></li>
         <li><a href="#Home">من أنا؟</a></li>
