--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
     </ul>
 </nav>
 <div class="contant">
-    
+    <div class="textt">
+        <h3>أهلًا،أنا</h3>
+            <h1>لجين حمد</h1>
+    </div>
 </div>
  </section>
 </body>
