--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 </nav>
 <div class="contant">
     <div class="textt">
-        <h3>أهلًا،أنا</h3>
-            <h1>لجين حمد</h1>
+        <h3>أهلًا، أنا</h3>
+            <h1>لجين حمد المطيري</h1>
     </div>
 </div>
  </section>
