--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <div class="textt">
         <h3>أهلًا، أنا</h3>
             <h1>لجين حمد المطيري</h1>
+            <h5>طالبة تقنية معلومات</h5>
     </div>
 </div>
  </section>
