--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </nav>
 <div class="contant">
     <div class="textt">
-        <h3>أهلًا، أنا</h3>
+        <h3>أهلًا، أنا إسمي</h3>
             <h1>لجين حمد المطيري</h1>
             <h5>طالبة تقنية معلومات</h5>
     </div>
