--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
             <h1>لجين حمد المطيري</h1>
             <h5>طالبة تقنية معلومات</h5>
     </div>
+    <div class="cimage">
+        <img src="icon/White Camellia White Transparent, White Camellia, Flowers, White, Elegant PNG Image For Free Download.jpeg" alt="" class="mypic">
+    </div>
 </div>
  </section>
 </body>
