--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h5>طالبة تقنية معلومات</h5>
     </div>
     <div class="cimage">
-        <img src="icon/White Camellia White Transparent, White Camellia, Flowers, White, Elegant PNG Image For Free Download.jpeg" alt="" class="mypic">
+        <img src="icon/" alt="" class="mypic">
     </div>
 </div>
  </section>
