--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h5>طالبة تقنية معلومات</h5>
     </div>
     <div class="cimage">
-        <img src="icon/" alt="" class="mypic">
+        <img src="icon/6ed02652-4d76-4f33-9543-3da7887fc168.jpeg" alt="" class="mypic">
     </div>
 </div>
  </section>
