--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-compatible" content="IE=edge"/>
+    <meta http-equiv="X-UA-compatible" content="El=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Lujain's Personal Website</title>
     <meta name="description" content="CV"/>
@@ -24,13 +24,13 @@
     </ul>
 </nav>
 <div class="contant">
-    <div class="cimage">
-        <img src="icon/9d8665f2-3f75-46a2-8c4e-23a4b9f39d27.jpeg" alt="" class="mypic">
-    </div>
     <div class="textt">
         <h3>أهلًا، أنا إسمي</h3>
-        <h1>لجين حمد المطيري</h1>
-        <h5>طالبة تقنية معلومات</h5>
+            <h1>لجين حمد المطيري</h1>
+            <h5>طالبة تقنية معلومات</h5>
+    </div>
+    <div class="cimage">
+        <img src="icon/9d8665f2-3f75-46a2-8c4e-23a4b9f39d27.jpeg" alt="" class="mypic">
     </div>
 </div>
  </section>
