--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h5>طالبة تقنية معلومات</h5>
     </div>
     <div class="cimage">
-        <img src="icon/9d8665f2-3f75-46a2-8c4e-23a4b9f39d27.jpeg" alt="" class="mypic">
+        <img src="icon/Untitled design.png" alt="" class="mypic">
     </div>
 </div>
  </section>
