--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 </nav>
 <div class="contant">
     <div class="textt">
-        <h3>أهلًا، أنا إسمي</h3>
-            <h1>لجين حمد المطيري</h1>
-            <h5>طالبة تقنية معلومات</h5>
+        <h3>hello, I'm </h3>
+            <h1>lujain</h1>
+            <h5></h5>
     </div>
     <div class="cimage">
         <img src="icon/Untitled design.png" alt="" class="mypic">
