--- a/index.html
+++ b/index.html
@@ -13,16 +13,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Baskervville+SC&family=Bona+Nova+SC:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
- <section class="home" id="Home">
-<nav>
-    <h2> <span>Get to know me</span></h2>
-    <ul>
-        <li><a href="#Home">الصفحة الرئيسية</a></li>
-        <li><a href="#Home">من أنا؟</a></li>
-        <li><a href="#Home">مهاراتي</a></li>
-        <li><a href="#Home">تواصل معي</a></li>
-    </ul>
-</nav>
+ 
+    <header id="Home">
+        <div id="navbar">
+              <nav>
+                  <h2> <span>Get to know me</span></h2>
+         <ul>
+               <li><a href="#Home">الصفحة الرئيسية</a></li>
+               <li><a href="#about">من أنا؟</a></li>
+               <li><a href="#skills">مهاراتي</a></li>
+               <li><a href="#contact">تواصل معي</a></li>
+         </ul>
+     </nav>
+   </div>
+</header>
 <div class="contant">
     <div class="textt">
     <h3>أهلًا، أنا إسمي </h3>
@@ -33,6 +37,6 @@
         <img src="icon/Untitled design.png" alt="" class="mypic">
     </div>
 </div>
- </section>
+ 
 </body>
 </html>
