--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 </head>
 <body>
  
-    <header id="Home">
-        <div id="navbar">
+    <section id="Home">
               <nav>
                   <h2> <span>Get to know me</span></h2>
          <ul>
@@ -25,8 +24,8 @@
                <li><a href="#contact">تواصل معي</a></li>
          </ul>
      </nav>
-   </div>
-</header>
+  
+
 <div class="contant">
     <div class="textt">
     <h3>أهلًا، أنا إسمي </h3>
@@ -37,6 +36,6 @@
         <img src="icon/Untitled design.png" alt="" class="mypic">
     </div>
 </div>
- 
+    </section>
 </body>
 </html>
