--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
     <h3>أهلًا، أنا إسمي </h3>
      <h1>لجين حمد المطيري</h1>
     <h5>طالبة تقنية معلومات</h5>
+    <div class="social-icons">
+        <a href="https://www.linkedin.com/in/yourprofile" target="_blank">
+            <img src="icon/linkedin_icon-icons.com_65588.png" alt="LinkedIn">
+        </a>
+       
+        <a href="https://twitter.com/yourprofile" target="_blank">
+            <img src="icon/twitter_x_logo_icon_258955.png" alt="Twitter">
+        </a>
+    </div>
     </div>
     <div class="cimage">
         <img src="icon/Untitled design.png" alt="" class="mypic">
