--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </a>
        
         <a href="https://twitter.com/yourprofile" target="_blank">
-            <img src="icon/twitter_x_new_logo_x_circle_icon_256076.png" alt="Twitter">
+            <img src="icon/twitter_x_new_logo_x_icon_256077.ico" alt="Twitter">
         </a>
     </div>
     </div>
