--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  
     <section id="Home">
               <nav>
-                  <h2> <span>Get to know me</span></h2>
+                  <h1> <span>Get to know me</span></h1>
          <ul>
                <li><a href="#Home">الصفحة الرئيسية</a></li>
                <li><a href="#about">من أنا؟</a></li>
@@ -28,9 +28,9 @@
 
 <div class="contant">
     <div class="textt">
-    <h3>أهلًا، أنا إسمي </h3>
+    <p class="one">أهلًا، أنا إسمي </p>
      <h1>لجين حمد المطيري</h1>
-    <h5>طالبة تقنية معلومات</h5>
+    <p class="sec">طالبة تقنية معلومات</p>
     <div class="social-icons">
         <a href="https://www.linkedin.com/in/yourprofile" target="_blank">
             <img src="icon/linkedin_icon-icons.com_65588.png" alt="LinkedIn">
