--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  
     <section id="Home">
               <nav>
-                  <h1> <span>Get to know me</span></h1>
+                  <p class="A"> <span>Get to know me</span></p>
          <ul>
                <li><a href="#Home">الصفحة الرئيسية</a></li>
                <li><a href="#about">من أنا؟</a></li>
