--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         <a href="https://twitter.com/yourprofile" target="_blank">
             <img src="icon/twitter_x_new_logo_x_icon_256077.ico" alt="Twitter">
         </a>
+        <a href="https://github.com/Lujain09" target="_blank">
+            <img src="icon/github.png" alt="GitHub">
+        </a>
     </div>
     </div>
     <div class="cimage">
