--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <img src="icon/twitter_x_new_logo_x_icon_256077.ico" alt="Twitter">
         </a>
         <a href="https://github.com/Lujain09" target="_blank">
-            <img src="icon/github.png" alt="GitHub">
+            <img src="icon/github (1).png" alt="GitHub">
         </a>
     </div>
     </div>
