--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <p class="sec">طالبة تقنية معلومات</p>
     <div class="social-icons">
         <a href="https://www.linkedin.com/in/yourprofile" target="_blank">
-            <img src="icon/linkedin_icon-icons.com_65588.png" alt="LinkedIn">
+            <img src="icon/business.png" alt="LinkedIn">
         </a>
        
         <a href="https://twitter.com/yourprofile" target="_blank">
