--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
             <img src="icon/github (1).png" alt="GitHub">
         </a>
     </div>
+    <div class="download-button">
+        <a href="path/to/your/cv.pdf" download>
+            تحميل السيرة الذاتية
+        </a>
+    </div>
     </div>
     <div class="cimage">
         <img src="icon/Untitled design.png" alt="" class="mypic">
