--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
     <div class="download-button">
         <a href="path/to/your/cv.pdf" download>
-            تحميل السيرة الذاتية
+            تحميل السيرة الذاتية<i class="fas fa-download"></i>
         </a>
     </div>
     </div>
