--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         </a>
     </div>
     <div class="download-button">
-        <a href="path/to/your/cv.pdf" download>
-            تحميل السيرة الذاتية<i class="fas fa-download"></i>
+        <a href="path/to/your/cv.pdf" download><img src="icon/download.png" alt="">
+            تحميل السيرة الذاتية
         </a>
     </div>
     </div>
