--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </a>
     </div>
     <div class="download-button">
-        <a href="path/to/your/cv.pdf" download><img src="icon/download.png" alt="">
+        <a href="path/to/your/cv.pdf" download><img src="icon/download.png" alt="" class="ico">
             تحميل السيرة الذاتية
         </a>
     </div>
