--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                <li><a href="#skills">مهاراتي</a></li>
                <li><a href="#contact">تواصل معي</a></li>
          </ul>
-         <button class="dark-mode-toggle" onclick="toggleDarkMode()">Toggle Dark Mode</button>
+         <button class="dark-mode-toggle" onclick="toggleDarkMode()">Dark Mode</button>
      </nav>
   
 
