--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                <li><a href="#skills">مهاراتي</a></li>
                <li><a href="#contact">تواصل معي</a></li>
          </ul>
-         <button class="dark-mode-toggle" onclick="toggleDarkMode()">Dark Mode</button>
+         <button class="dark-mode-toggle btn btn-outline-primary ml-auto" onclick="DarkMode()">Toggle Dark Mode</button>
+
      </nav>
   
 
@@ -56,7 +57,7 @@
 </div>
     </section>
     <script>
-        function toggleDarkMode() {
+        function DarkMode() {
             document.body.classList.toggle("dark-mode");
         }
 
