--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
                <li><a href="#skills">مهاراتي</a></li>
                <li><a href="#contact">تواصل معي</a></li>
          </ul>
-         <button class="dark-mode-toggle btn btn-outline-primary ml-auto" onclick="DarkMode()">Toggle Dark Mode</button>
+         <button class="dark-mode-toggle btn btn-outline-primary ml-auto" onclick="DarkMode()"> Dark Mode</button>
 
      </nav>
   
 
-<div class="contant">
+     <div class="contant d-flex flex-column align-items-center justify-content-center text-center">
     <div class="textt">
     <p class="one">أهلًا، أنا إسمي </p>
      <h1>لجين حمد المطيري</h1>
