--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
      </nav>
   
 
-     <div class="contant d-flex flex-column align-items-center justify-content-center text-center">
+     <div class="contant d-flex flex-column align-items-center ">
     <div class="textt">
     <p class="one">أهلًا، أنا إسمي </p>
      <h1>لجين حمد المطيري</h1>
