--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
      </nav>
   
 
-     <div class="contant d-flex flex-column align-items-center ">
+     <div class="contant">
     <div class="textt">
     <p class="one">أهلًا، أنا إسمي </p>
      <h1>لجين حمد المطيري</h1>
