--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                <li><a href="#skills">مهاراتي</a></li>
                <li><a href="#contact">تواصل معي</a></li>
          </ul>
-         <button class="dark-mode-toggle btn btn-outline-primary ml-auto" onclick="DarkMode()"> Dark Mode</button>
+         <button class="dark-mode-toggle" onclick="DarkMode()"> Dark Mode</button>
 
      </nav>
   
