--- a/index.html
+++ b/index.html
@@ -11,21 +11,29 @@
     <link rel="icon" href="icon/flower_plant_nature_rose_icon_232532.ico"/>
     <link href="https://fonts.googleapis.com/css2?family=Amiri:ital,wght@0,400;0,700;1,400;1,700&family=El+Messiri:wght@400..700&display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Baskervville+SC&family=Bona+Nova+SC:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-    
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+</head>
 <body>
- 
     <section id="Home">
-              <nav>
-                  <p class="A"> <span>Get to know me</span></p>
-         <ul>
-               <li><a href="#Home">الصفحة الرئيسية</a></li>
-               <li><a href="#about">من أنا؟</a></li>
-               <li><a href="#skills">مهاراتي</a></li>
-               <li><a href="#contact">تواصل معي</a></li>
-         </ul>
-         <button class="dark-mode-toggle" onclick="DarkMode()"> Dark Mode</button>
-
-     </nav>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <p class="A navbar-brand"> <span>Get to know me</span></p>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item"><a class="nav-link" href="#Home">الصفحة الرئيسية</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#about">من أنا؟</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#skills">مهاراتي</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#contact">تواصل معي</a></li>
+                        <li class="nav-item">
+                            <button class="btn btn-dark" onclick="DarkMode()">Dark Mode</button>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
   
 
      <div class="contant">
