--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <img src="icon/github (1).png" alt="GitHub">
         </a>
     </div>
-    <div class="download-button">
+    <div class="download-button mt-4">
         <a href="path/to/your/cv.pdf" download>
             تحميل السيرة الذاتية
         </a>
