--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="icon/flower_plant_nature_rose_icon_232532.ico"/>
     <link href="https://fonts.googleapis.com/css2?family=Amiri:ital,wght@0,400;0,700;1,400;1,700&family=El+Messiri:wght@400..700&display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Baskervville+SC&family=Bona+Nova+SC:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    
 </head>
 <body>
     <section id="Home">
@@ -53,7 +53,7 @@
             <img src="icon/github (1).png" alt="GitHub">
         </a>
     </div>
-    <div class="download-button mt-4">
+    <div class="download-button">
         <a href="path/to/your/cv.pdf" download>
             تحميل السيرة الذاتية
         </a>
@@ -64,9 +64,7 @@
     </div>
 </div>
     </section>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+   
     <script>
         function DarkMode() {
             document.body.classList.toggle("dark-mode");
