--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <section id="Home">
         <nav>
-            <p class="container"> <span>Get to know me</span></p>
+            <p class="A"> <span>Get to know me</span></p>
    <ul>
          <li><a href="#Home">الصفحة الرئيسية</a></li>
          <li><a href="#about">من أنا؟</a></li>
