--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Amiri:ital,wght@0,400;0,700;1,400;1,700&family=El+Messiri:wght@400..700&display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Baskervville+SC&family=Bona+Nova+SC:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-   
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
 </head>
 <body>
     <section id="Home">
         <nav>
-            <p class="A"> <span>Get to know me</span></p>
+            <p class="A "> <span>Get to know me</span></p>
    <ul>
          <li><a href="#Home">الصفحة الرئيسية</a></li>
          <li><a href="#about">من أنا؟</a></li>
