--- a/index.html
+++ b/index.html
@@ -57,6 +57,23 @@
     </div>
 </div>
     </section>
+    <main>
+<section class="about">
+   <div class="container">
+      <h1>about me</h1>
+      <hr>
+      <div class="about-c">
+        <div class="c1">
+
+        </div>
+        <div class="c2">
+            <p class="B">I'm Lujain Al-mutairi, a web developer</p>
+        </div>
+      </div>
+   </div>
+
+</section>
+    </main>
    
     <script>
         function DarkMode() {
