--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
         </div>
         <div class="c2">
             <p class="B">I'm Lujain Al-mutairi, a web developer</p>
+            <p class="C">a Front-End Developer with a passion for creating user-friendly and 
+                visually appealing web applications. I am currently pursuing my 
+                degree in Information Technology at Qassim University, where I have 
+                gained extensive knowledge in web development technologies and best practices. 
+                My skills include HTML, CSS, JavaScript, and various front-end frameworks,
+                 which I utilize to bring innovative ideas to life.</p>
         </div>
       </div>
    </div>
