--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <p class="A "> <span>Get to know me</span></p>
    <ul>
          <li><a href="#Home">الصفحة الرئيسية</a></li>
-         <li><a href="#about-c">من أنا؟</a></li>
+         <li><a href="#about">من أنا؟</a></li>
          <li><a href="#skills">مهاراتي</a></li>
          <li><a href="#contact">تواصل معي</a></li>
    </ul>
@@ -58,7 +58,7 @@
 </div>
     </section>
     <main>
-<section class="about">
+<section id="about">
    <div class="container">
       <h1>about me</h1>
       <hr>
