--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </div>
     </section>
     <main>
-<section id="about">
+<section id="about" class="j">
    <div class="container">
       <h1>about me</h1>
       <hr>
