--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                 gained extensive knowledge in web development technologies and best practices. 
                 My skills include HTML, CSS, JavaScript, and various front-end frameworks,
                  which I utilize to bring innovative ideas to life.</p>
+                 <p class="C">In addition to my technical skills, I am also a quick learner and a team player, always eager to take on new challenges and collaborate with others to achieve common goals. My future career goals include becoming a full-stack developer and contributing to innovative projects that make a difference.</p>
         </div>
         <div class="c2">
            
