--- a/index.html
+++ b/index.html
@@ -80,6 +80,16 @@
    </div>
 
 </section>
+<section id="skills" class="skills">
+    <div class="container">
+        <h1>My Skills</h1>
+        <div class="skills-bars">
+            <div class="skill-bar html"><span>HTML</span></div>
+            <div class="skill-bar css"><span>CSS</span></div>
+            <div class="skill-bar js"><span>JavaScript</span></div>
+            <div class="skill-bar php"><span>PHP</span></div>
+        </div>
+    </div>
     </main>
    
     <script>
