--- a/index.html
+++ b/index.html
@@ -84,12 +84,29 @@
     <div class="container">
         <h1>My Skills</h1>
         <div class="skills-bars">
-            <div class="skill-bar html"><span>HTML</span></div>
-            <div class="skill-bar css"><span>CSS</span></div>
-            <div class="skill-bar js"><span>JavaScript</span></div>
-            <div class="skill-bar php"><span>PHP</span></div>
+            <div class="skill-bar html">
+                <div class="skill-progress" style="width: 90%;"></div>
+                <span class="skill-name">HTML</span>
+                <span class="skill-percentage">90%</span>
+            </div>
+            <div class="skill-bar css">
+                <div class="skill-progress" style="width: 80%;"></div>
+                <span class="skill-name">CSS</span>
+                <span class="skill-percentage">80%</span>
+            </div>
+            <div class="skill-bar js">
+                <div class="skill-progress" style="width: 70%;"></div>
+                <span class="skill-name">JavaScript</span>
+                <span class="skill-percentage">70%</span>
+            </div>
+            <div class="skill-bar php">
+                <div class="skill-progress" style="width: 60%;"></div>
+                <span class="skill-name">PHP</span>
+                <span class="skill-percentage">60%</span>
+            </div>
         </div>
     </div>
+</section>
     </main>
    
     <script>
