--- a/index.html
+++ b/index.html
@@ -85,22 +85,22 @@
         <h1>My Skills</h1>
         <div class="skills-bars">
             <div class="skill-bar html">
-                <div class="skill-progress" style="width: 90%;"></div>
+                <div class="skill-progress"></div>
                 <span class="skill-name">HTML</span>
                 <span class="skill-percentage">95%</span>
             </div>
             <div class="skill-bar css">
-                <div class="skill-progress" style="width: 80%;"></div>
+                <div class="skill-progress" ></div>
                 <span class="skill-name">CSS</span>
                 <span class="skill-percentage">90%</span>
             </div>
             <div class="skill-bar js">
-                <div class="skill-progress" style="width: 70%;"></div>
+                <div class="skill-progress" ></div>
                 <span class="skill-name">JavaScript</span>
                 <span class="skill-percentage">65%</span>
             </div>
             <div class="skill-bar php">
-                <div class="skill-progress" style="width: 60%;"></div>
+                <div class="skill-progress" ></div>
                 <span class="skill-name">PHP</span>
                 <span class="skill-percentage">65%</span>
             </div>
