--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 </section>
 <section id="skills" class="skills">
     <div class="container">
-        <h1 class="u">Programming Skills</h1>
+        <h1 >Programming Skills</h1>
         <div class="skills-bars">
             <div class="skill-bar html">
                 <div class="skill-progress"></div>
