--- a/index.html
+++ b/index.html
@@ -107,6 +107,25 @@
         </div>
     </div>
 </section>
+<section id="contact" class="contact">
+    <div class="container">
+        <h1>تواصل معي</h1>
+        <form action="/action_page.php">
+            <div class="form-group">
+                <label for="email">Email address:</label>
+                <input type="email" class="form-control" id="email" required>
+            </div>
+            <div class="form-group">
+                <label for="pwd">Password:</label>
+                <input type="password" class="form-control" id="pwd" required>
+            </div>
+            <div class="checkbox">
+                <label><input type="checkbox">Remember me</label>
+            </div>
+            <button type="submit" class="btn btn-default">Submit</button>
+        </form>
+    </div>
+</section>
     </main>
    
     <script>
