--- a/index.html
+++ b/index.html
@@ -65,17 +65,23 @@
       <div class="about-c">
         <div class="c1">
             <p class="B">I'm Lujain Al-mutairi, a web developer</p>
-            <p class="C">a Front-End Developer with a passion for creating user-friendly and 
-                visually appealing web applications. I am currently pursuing my 
-                degree in Information Technology at Qassim University, where I have 
-                gained extensive knowledge in web development technologies and best practices. 
-                My skills include HTML, CSS, JavaScript, and various front-end frameworks,
-                 which I utilize to bring innovative ideas to life.</p>
-                 <p class="C">In addition to my technical skills, I am also a quick learner and a team player, always eager to take on new challenges and collaborate with others to achieve common goals. My future career goals include becoming a full-stack developer and contributing to innovative projects that make a difference.</p>
+            <p class="C">As a Front-End Developer with a passion for creating user-friendly and visually appealing web applications, I am currently 
+                pursuing my degree in Information Technology at Qassim University. 
+                I have gained extensive knowledge in web development
+                 technologies and best practices, including HTML, CSS, JavaScript, 
+                 and various front-end frameworks, which I utilize to bring innovative ideas to life.
+        
+                 </p>
+                 <p class="C">In addition to my technical skills, 
+                    I am deeply interested in graphic design, which allows me to create 
+                    visually stunning and effective user interfaces. I am a quick learner and a 
+                    team player, always eager to take on new challenges and collaborate with others 
+                    to achieve common goals. My future career aspirations include becoming 
+                    a full-stack developer and contributing to innovative projects that make 
+                    a difference. I am committed to continually
+                     improving my skills and staying updated with the latest industry trends.</p>
         </div>
-        <div class="c2">
-           
-        </div>
+
       </div>
    </div>
 
