--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </a>
     </div>
     <div class="download-button">
-        <a href="path/to/your/cv.pdf" download>
+        <a href="icon/resumeww.pdf" download>
             تحميل السيرة الذاتية
         </a>
     </div>
